--- a/UPMPackage/package.json
+++ b/UPMPackage/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.6",
     "displayName": "ByteBrew Unity SDK",
     "description": "ByteBrew SDK for Unity. This package provides a simple way to integrate ByteBrew into your Unity project.",
+    "hideInEditor": false,
     "keywords": [
         "ByteBrew",
         "SDK",
