--- a/UPMPackage/package.json
+++ b/UPMPackage/package.json
@@ -1,12 +1,13 @@
 {
     "name": "com.bytebrew.unitysdk",
     "version": "0.1.6",
-    "displayName": "ByteBrew Unity SDK",
+    "displayName": "ByteBrewSDK",
     "description": "ByteBrew SDK for Unity. This package provides a simple way to integrate ByteBrew into your Unity project.",
     "hideInEditor": false,
     "keywords": [
         "ByteBrew",
         "SDK",
+        "ByteBrewSDK",
         "Analytics"
     ],
     "author": {
